@@ -4,3 +4,21 @@
 (setq doom-font (font-spec :family "Hack Nerd Font" :size 18 :weight 'semi-light))
 
 (setq display-line-numbers-type nil)
+
+(defvar --backup-directory (concat user-emacs-directory "backups"))
+(if (not (file-exists-p --backup-directory))
+    (make-directory --backup-directory t))
+(setq backup-directory-alist `(("." . ,--backup-directory)))
+(setq make-backup-files t       ; backup of a file the first time it is saved.
+      backup-by-copying t       ; don't clobber symlinks
+      version-control t         ; version numbers for backup files
+      delete-old-versions t     ; delete excess backup files silently
+      delete-by-moving-to-trash t
+      kept-old-versions 6       ; oldest versions to keep when a new numbered backup is made (default: 2)
+      kept-new-versions 9       ; newest versions to keep when a new numbered backup is made (default: 2)
+      auto-save-default t       ; auto-save every buffer that visits a file
+      auto-save-timeout 20      ; number of seconds idle time before auto-save (default: 30)
+      auto-save-interval 200    ; number of keystrokes between auto-saves (default: 300)
+      )
+
+(add-hook 'window-setup-hook #'toggle-frame-maximized)
