@@ -1,5 +1,10 @@
-* Changelog
+* Change log
 ** 2017-07-10
+*** Added
+
+- Reasonable looking backup settings from a [[https://stackoverflow.com/a/18330742/5769][Stack Overflow answer]].
+- Start Emacs window maximsed.
+
 *** Changed
 
 - Set personal name and email address.
